--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -134,7 +134,7 @@
                     <a class="nav-link dropdown-toggle waves-effect waves-dark" href="" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false"><img src="assets/images/users/1.jpg" alt="user"
                             class="profile-pic" /></a>
-                    <div class="dropdown-menu dropdown-menu-right animated flipInY">
+                    <div class="dropdown-menu dropdown-menu-right animated fadeIn">
                         <ul class="dropdown-user">
                             <li>
                                 <div class="dw-user-box">
