--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -31,7 +31,7 @@
                 </div>
             </div> -->
             <!-- ============================================================== -->
-            <!-- End PAge Content -->
+            <!-- End Page Content -->
             <!-- ============================================================== -->
 
         </div>
