--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,3 +1,43 @@
-<p>
-  progress works!
-</p>
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+                <h3 class="card-title">Barra de progreso</h3>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" role="progressbar"
+                        [style.width]="porcentaje + '%'" [attr.aria-valuenow]="porcentaje" aria-valuemin="0"
+                        aria-valuemax="100">Description</div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <div class="input-group">
+                    <span class="input-group-btn">
+                        <button (click)="cambiarValor(-5)" class="btn btn-primary" type="button" id="inputGroupFileAddon03">
+                            <i class="mdi mdi-minus"></i>
+                        </button>
+                    </span>
+                    <input type="text" class="form-control" name="porcentaje" [(ngModel)]="porcentaje">
+                    <span class="input-group-btn">
+                        <button (click)="cambiarValor(5)" class="btn btn-primary" type="button" id="inputGroupFileAddon04">
+                            <i class="mdi mdi-plus"></i>
+                        </button>
+                    </span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                Texto 2
+            </div>
+        </div>
+    </div>
+</div>
