--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -5,8 +5,14 @@
                 <h3 class="card-title">Barra de progreso</h3>
                 <div class="progress">
                     <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" role="progressbar"
-                        [style.width]="porcentaje + '%'" [attr.aria-valuenow]="porcentaje" aria-valuemin="0"
-                        aria-valuemax="100">Description</div>
+                        [style.width]="porcentaje1 + '%'" [attr.aria-valuenow]="porcentaje1" aria-valuemin="0"
+                        aria-valuemax="100"></div>
+
+                </div>
+                <div class="progress mt-2">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
+                        [style.width]="porcentaje2 + '%'" [attr.aria-valuenow]="porcentaje2" aria-valuemin="0"
+                        aria-valuemax="100"></div>
                 </div>
             </div>
         </div>
@@ -17,26 +23,14 @@
     <div class="col-6">
         <div class="card">
             <div class="card-body">
-                <div class="input-group">
-                    <span class="input-group-btn">
-                        <button (click)="cambiarValor(-5)" class="btn btn-primary" type="button" id="inputGroupFileAddon03">
-                            <i class="mdi mdi-minus"></i>
-                        </button>
-                    </span>
-                    <input type="text" class="form-control" name="porcentaje" [(ngModel)]="porcentaje">
-                    <span class="input-group-btn">
-                        <button (click)="cambiarValor(5)" class="btn btn-primary" type="button" id="inputGroupFileAddon04">
-                            <i class="mdi mdi-plus"></i>
-                        </button>
-                    </span>
-                </div>
+                <app-incrementador (cambioValor)="porcentaje1 = $event" leyenda="Progess Azul" [porcentaje]="porcentaje1"></app-incrementador>
             </div>
         </div>
     </div>
     <div class="col-6">
         <div class="card">
             <div class="card-body">
-                Texto 2
+                <app-incrementador (cambioValor)="porcentaje2 = $event" leyenda="Progess Verde" [porcentaje]="porcentaje2"></app-incrementador>
             </div>
         </div>
     </div>
