Fin de la sección 7

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,17 +4,17 @@
 <section id="wrapper" class="login-register login-sidebar" style="background-image:url(../assets/images/background/login-register.jpg);">
     <div class="login-box card">
         <div class="card-body">
-            <form class="form-horizontal form-material" id="loginform" action="index.html">
+            <form class="form-horizontal form-material" (ngSubmit)="acceder()">
                 <a href="javascript:void(0)" class="text-center db"><img src="../assets/images/logo-icon.png" alt="Home" /><br /><img
                         src="../assets/images/logo-text.png" alt="Home" /></a>
                 <div class="form-group m-t-40">
                     <div class="col-xs-12">
-                        <input class="form-control" type="text" required="" placeholder="Usuario">
+                        <input class="form-control" type="text" placeholder="Usuario">
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-xs-12">
-                        <input class="form-control" type="password" required="" placeholder="Contraseña">
+                        <input class="form-control" type="password" placeholder="Contraseña">
                     </div>
                 </div>
                 <div class="form-group row">
@@ -30,7 +30,8 @@
                 <div class="form-group text-center m-t-20">
                     <div class="col-xs-12">
                         <button class="btn btn-info btn-lg btn-block text-uppercase btn-rounded" type="submit">
-                            Acceder</button>
+                            Acceder
+                        </button>
                     </div>
                 </div>
                 <div class="row">
@@ -56,7 +57,7 @@
                 </div>
                 <div class="form-group ">
                     <div class="col-xs-12">
-                        <input class="form-control" type="text" required="" placeholder="Email">
+                        <input class="form-control" type="text" placeholder="Email">
                     </div>
                 </div>
                 <div class="form-group text-center m-t-20">
