--- a/src/app/login/register.component.html
+++ b/src/app/login/register.component.html
@@ -4,34 +4,47 @@
 <section id="wrapper" class="login-register login-sidebar" style="background-image:url(../assets/images/background/login-register.jpg);">
     <div class="login-box card">
         <div class="card-body">
-            <form class="form-horizontal form-material" id="loginform" action="index.html">
+
+            <form ngNativeValidate [formGroup]="formulario" (ngSubmit)="registrarUsuario()" class="form-horizontal form-material"
+                id="loginform" action="index.html">
                 <a href="javascript:void(0)" class="text-center db"><img src="../assets/images/logo-icon.png" alt="Home" /><br /><img
                         src="../assets/images/logo-text.png" alt="Home" /></a>
                 <h3 class="box-title m-t-40 m-b-0">Regístrese ahora</h3><small>Crea tu cuenta y disfruta</small>
                 <div class="form-group m-t-20">
                     <div class="col-xs-12">
-                        <input class="form-control" type="text" required="" placeholder="Nombre">
+                        <input formControlName="nombre" name="nombre" class="form-control" type="text" required
+                            placeholder="Nombre">
                     </div>
                 </div>
                 <div class="form-group ">
                     <div class="col-xs-12">
-                        <input class="form-control" type="text" required="" placeholder="Email">
+                        <input formControlName="email" name="email" class="form-control" type="email" required
+                            placeholder="Email">
                     </div>
                 </div>
                 <div class="form-group ">
                     <div class="col-xs-12">
-                        <input class="form-control" type="password" required="" placeholder="Contraseña">
+                        <input formControlName="password" name="password" class="form-control" type="password" required
+                            placeholder="Contraseña">
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-xs-12">
-                        <input class="form-control" type="password" required="" placeholder="Confirmar Contraseña">
+                        <input formControlName="password2" name="password2" class="form-control" type="password"
+                            required placeholder="Confirmar Contraseña">
                     </div>
                 </div>
+
+                <div class="form-group" *ngIf="formulario.errors?.sonIguales && !formulario.pristine">
+                    <div class="alert alert-danger" role="alert">
+                        <strong>Las contraseñas deben ser iguales</strong>
+                    </div>
+                </div>
+
                 <div class="form-group row">
                     <div class="col-md-12">
                         <div class="checkbox checkbox-primary p-t-0">
-                            <input id="checkbox-signup" type="checkbox">
+                            <input formControlName="condiciones" name="condiciones" id="checkbox-signup" type="checkbox">
                             <label for="checkbox-signup"> Acepto todos los <a href="#">términos</a></label>
                         </div>
                     </div>
