--- a/src/app/login/register.component.html
+++ b/src/app/login/register.component.html
@@ -35,7 +35,7 @@
                     </div>
                 </div>
 
-                <div class="form-group" *ngIf="formulario.errors?.sonIguales && !formulario.pristine">
+                <div class="form-group" *ngIf="!!formulario.errors?.sonIguales && !formulario.pristine">
                     <div class="alert alert-danger" role="alert">
                         <strong>Las contraseñas deben ser iguales</strong>
                     </div>
@@ -57,7 +57,7 @@
                 </div>
                 <div class="form-group m-b-0">
                     <div class="col-sm-12 text-center">
-                        <p>¿Ya tienes una cuenta? <a href="pages-login-2.html" class="text-info m-l-5"><b>Acceder</b></a></p>
+                        <p>¿Ya tienes una cuenta? <a routerLink="/login" class="text-info m-l-5"><b>Acceder</b></a></p>
                     </div>
                 </div>
             </form>
