--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -132,26 +132,31 @@
                 <!-- ============================================================== -->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle waves-effect waves-dark" href="" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false"><img src="assets/images/users/1.jpg" alt="user"
-                            class="profile-pic" /></a>
+                        aria-haspopup="true" aria-expanded="false">
+                        <img [src]="_us.usuario.img | imagen" alt="user" class="profile-pic" />
+                    </a>
                     <div class="dropdown-menu dropdown-menu-right animated fadeIn">
                         <ul class="dropdown-user">
                             <li>
                                 <div class="dw-user-box">
-                                    <div class="u-img"><img src="assets/images/users/1.jpg" alt="user"></div>
+                                    <div class="u-img">
+                                        <img [src]="_us.usuario.img | imagen" alt="user">
+                                    </div>
                                     <div class="u-text">
-                                        <h4>Steave Jobs</h4>
-                                        <p class="text-muted">varun@gmail.com</p><a href="pages-profile.html" class="btn btn-rounded btn-danger btn-sm">View
-                                            Profile</a>
+                                        <h4>{{ _us.usuario.nombre }}</h4>
+                                        <p class="text-muted">{{ _us.usuario.email }}</p>
+                                        <a [routerLink]="['/perfil']" class="btn btn-rounded btn-danger btn-sm">
+                                            Ver Perfil
+                                        </a>
                                     </div>
                                 </div>
                             </li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#"><i class="ti-user"></i> My Profile</a></li>
+                            <li><a [routerLink]="['/perfil']"><i class="ti-user"></i> Mi Perfil</a></li>
                             <li><a href="#"><i class="ti-wallet"></i> My Balance</a></li>
                             <li><a href="#"><i class="ti-email"></i> Inbox</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#"><i class="ti-settings"></i> Account Setting</a></li>
+                            <li><a routerLink="/account-settings"><i class="ti-settings"></i> Account Setting</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a (click)="_us.logOut()" class="pointer"><i class="fa fa-power-off"></i> Logout</a></li>
                         </ul>
