--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -9,11 +9,11 @@
             <ul id="sidebarnav">
                 <li class="user-profile">
                     <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
-                        <img src="../assets/images/users/profile.png" alt="user" />
-                        <span class="hide-menu">Steave Jobs </span>
+                        <img [src]="_us.usuario.img | imagen" alt="user" />
+                        <span class="hide-menu">{{ _us.usuario.nombre }} </span>
                     </a>
                     <ul aria-expanded="false" class="collapse">
-                        <li><a href="javascript:void()">My Profile </a></li>
+                        <li><a [routerLink]="['/perfil']" routerLinkActive="active">Mi Perfil </a></li>
                         <li><a href="javascript:void()">My Balance</a></li>
                         <li><a href="javascript:void()">Inbox</a></li>
                         <li><a routerlinkActive="active" routerLink="/account-settings">Account Setting</a></li>
