--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -43,3 +43,6 @@
     <!-- End Page wrapper  -->
     <!-- ============================================================== -->
 </div>
+
+<!-- Modal Upload -->
+<app-modal-upload></app-modal-upload>
