--- a/src/app/pages/usuarios/usuarios.component.html
+++ b/src/app/pages/usuarios/usuarios.component.html
@@ -41,17 +41,23 @@
                     </thead>
                     <tbody>
                         <tr *ngFor="let usuario of usuarios">
-                            <td class="w70"><img [src]="usuario.img | imagen" class="img-thumbnail rounded-circle w50"
+                            <td class="w70">
+                                <img (click)="mostrarModal(usuario._id)" [src]="usuario.img | imagen" class="img-thumbnail rounded-circle w50 pointer"
                                     alt=""></td>
                             <td>{{ usuario.email }}</td>
                             <td>{{ usuario.nombre }}</td>
-                            <td>{{ usuario.role }}</td>
+                            <td>
+                                <select [(ngModel)]="usuario.role" name="role" id="role" class="form-control">
+                                    <option value="ADMIN_ROLE">ADMIN_ROLE</option>
+                                    <option value="USER_ROLE">USER_ROLE</option>
+                                </select>
+                            </td>
                             <td>
                                 <i *ngIf="usuario.google" class="fa fa-google-plus-circle fa-2x" aria-hidden="true"></i>
                                 <label *ngIf="!usuario.google" class="label label-info">Normal</label>
                             </td>
                             <td>
-                                <button type="button" class="btn btn-primary">
+                                <button (click)="guardarUsuario(usuario)" type="button" class="btn btn-primary">
                                     <i class="fa fa-save"></i>
                                 </button>
                                 <button (click)="borrarUsuario(usuario)" type="button" class="btn btn-danger" [hidden]="usuario._id === this._us.usuario._id">
