--- a/src/styles.css
+++ b/src/styles.css
@@ -18,3 +18,17 @@
 .w50 {
     width: 50px;
 }
+
+.fondo-negro {
+    background-color: rgba(0, 0, 0, 0.4);
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+}
+
+.oculto {
+    display: none;
+}
