--- a/src/app/pages/hospitales/hospitales.component.html
+++ b/src/app/pages/hospitales/hospitales.component.html
@@ -2,10 +2,8 @@
     <div class="col-12">
         <div class="card">
             <div class="card-body">
-
-                <input #usuarioBuscar (keyup)="buscarUsuario(usuarioBuscar.value)" type="text" name="" id="" class="form-control"
-                    placeholder="Buscar usuario">
-
+                <input #hospitalBuscar (keyup)="buscarHospital(hospitalBuscar.value)" type="text" name="" id="" class="form-control"
+                    placeholder="Buscar hospital">
             </div>
         </div>
     </div>
@@ -25,42 +23,45 @@
     <div class="col-12">
         <div class="card">
             <div class="card-body">
-                <h4 class="card-title">Usuarios registrados (<small>{{ total }}</small>)</h4>
+                <div class="row">
+                    <div class="col">
+                        <h4 class="card-title">Hospitales registrados (<small>{{total}}</small>) </h4>
+                    </div>
+                    <div class="col-xs|sm|md|lg|xl-1-12">
+                        <div class="text-right mr-3">
+                            <button (click)="crearHospital()" type="button" class="btn waves-effect waves-light btn-rounded btn-primary">
+                                <i class="fa fa-plus-square-o" aria-hidden="true"></i>
+                                Crear hospital
+                            </button>
+                        </div>
 
+                    </div>
+                </div>
 
                 <table class="table table-hover">
                     <thead>
                         <tr>
                             <th>Imagen</th>
-                            <th>Correo</th>
                             <th>Nombre</th>
-                            <th>Role</th>
-                            <th>Auth</th>
                             <th></th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let usuario of usuarios">
+                        <tr *ngFor="let hospital of hospitales">
                             <td class="w70">
-                                <img (click)="mostrarModal(usuario._id)" [src]="usuario.img | imagen" class="img-thumbnail rounded-circle w50 pointer"
-                                    alt=""></td>
-                            <td>{{ usuario.email }}</td>
-                            <td>{{ usuario.nombre }}</td>
+                                <img (click)="mostrarModal(hospital._id)" [src]="hospital.img | imagen:'hospitales'"
+                                    class="img-thumbnail w50 pointer" alt=""></td>
                             <td>
-                                <select [(ngModel)]="usuario.role" name="role" id="role" class="form-control">
-                                    <option value="ADMIN_ROLE">ADMIN_ROLE</option>
-                                    <option value="USER_ROLE">USER_ROLE</option>
-                                </select>
+                                <div class="form-group">
+                                    <input type="text" class="form-control" name="nombreHospital" [(ngModel)]="hospital.nombre">
+                                </div>
+
                             </td>
                             <td>
-                                <i *ngIf="usuario.google" class="fa fa-google-plus-circle fa-2x" aria-hidden="true"></i>
-                                <label *ngIf="!usuario.google" class="label label-info">Normal</label>
-                            </td>
-                            <td>
-                                <button (click)="guardarUsuario(usuario)" type="button" class="btn btn-primary">
+                                <button (click)="guardarHospital(hospital)" type="button" class="btn btn-primary">
                                     <i class="fa fa-save"></i>
                                 </button>
-                                <button (click)="borrarUsuario(usuario)" type="button" class="btn btn-danger" [hidden]="usuario._id === this._us.usuario._id">
+                                <button (click)="borrarHospital(hospital)" type="button" class="btn btn-danger">
                                     <i class="fa fa-trash-o"></i>
                                 </button>
                             </td>
