--- a/src/app/pages/medicos/medico.component.html
+++ b/src/app/pages/medicos/medico.component.html
@@ -1,30 +1,29 @@
-<div class="row">
+<div class="row animated fadeIn">
     <div class="col-md-6">
         <div class="card card-body">
             <h3 class="box-title m-b-0">Médico</h3>
-            <p class="text-muted m-b-30 font-13"> Nombre </p>
+            <p class="text-muted m-b-30 font-13">{{ medico.nombre }}</p>
             <div class="row">
                 <div class="col-sm-12 col-xs-12">
-                    <form ngNativeValidate (ngSubmit)="guardarMedico()">
+                    <form #f="ngForm" ngNativeValidate (ngSubmit)="guardarMedico(f)">
                         <div class="form-group">
                             <label>Nombre</label>
-                            <input type="text" class="form-control" placeholder="Nombre del médico">
+                            <input [(ngModel)]="medico.nombre" name="nombre" required type="text" class="form-control"
+                                placeholder="Nombre del médico">
                         </div>
                         <div class="form-group">
-                            <label>Hospital</label>
-                            <select class="select2 form-control custom-select select2-hidden-accessible" style="width: 100%; height:36px;"
-                                tabindex="-1" aria-hidden="true">
-
-
-                                <option value="AK">Alaska</option>
-                                <option value="HI">Hawaii</option>
-
+                            <label>Hospital <i class="fa fa-hospital-o" aria-hidden="true"></i></label>
+                            <select (change)="cambioHospital( $event.target.value )" [(ngModel)]="medico.hospital" name="hospital"
+                                class="select2 form-control custom-select select2-hidden-accessible" style="width: 100%; height:36px;"
+                                tabindex="-1" aria-hidden="true" required>
+                                <option value="">Seleccione un hospital</option>
+                                <option value="{{hosp._id}}" *ngFor="let hosp of hospitales">{{ hosp.nombre }}</option>
                             </select>
                         </div>
 
                         <button type="submit" class="btn btn-success waves-effect waves-light m-r-10">
                             <i class="fa fa-save" aria-hidden="true"></i> Guardar</button>
-                        <button [routerLink]="['/medicos']" class="btn btn-inverse waves-effect waves-light">Cancelar</button>
+                        <a [routerLink]="['/medicos']" class="btn btn-inverse waves-effect waves-light">Cancelar</a>
                     </form>
                 </div>
             </div>
@@ -33,14 +32,14 @@
 
     <div class="col-md-3">
         <div class="card card-body">
-            <h3 class="box-title m-b-0">Imagen</h3>
-            <img src="" alt="">
+            <h3 class="box-title m-b-0">Hospital <i class="fa fa-hospital-o" aria-hidden="true"></i></h3>
+            <img [src]="hospital.img | imagen: 'hospitales'" [alt]="hospital.nombre" class="img-fluid">
         </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3" *ngIf="medico._id">
         <div class="card card-body">
-            <h3 class="box-title m-b-0">Hospital</h3>
-            <img src="" alt="">
+            <h3 class="box-title m-b-0">Imagen</h3>
+            <img (click)="cambiarImagen()" [src]="medico.img | imagen: 'medicos'" class="rounded img-fluid pointer">
         </div>
     </div>
 </div>
