--- a/src/app/shared/nopagefound/nopagefound.component.html
+++ b/src/app/shared/nopagefound/nopagefound.component.html
@@ -1,3 +1,11 @@
-<p>
-    nopagefound works!
-</p>
+<section id="wrapper" class="error-page">
+    <div class="error-box">
+        <div class="error-body text-center">
+            <h1>404</h1>
+            <h3 class="text-uppercase">Page Not Found !</h3>
+            <p class="text-muted m-t-30 m-b-30">Parece que no encontraste el queso!</p>
+            <a routerLink="/login" class="btn btn-info btn-rounded waves-effect waves-light m-b-40">Inicio</a>
+        </div>
+        <footer class="footer text-center">© {{anio}} Admin Pro.</footer>
+    </div>
+</section>
