--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2537,7 +2537,7 @@ File: scss
 Custom-select
 ******************/
 .custom-select {
-  background: url(../../assets/images/custom-select.png) right 0.75rem center no-repeat; }
+  background: url(assets/images/custom-select.png) right 0.75rem center no-repeat; }
 
 /*******************
 textarea
@@ -5571,7 +5571,7 @@ File: scss
   color: #06d79c; }
 
 .has-success .form-control-success {
-  background-image: url(../../assets/images/icon/success.svg); }
+  background-image: url(assets/images/icon/success.svg); }
 
 .has-success .form-control {
   border-color: #06d79c; }
@@ -5580,7 +5580,7 @@ File: scss
   color: #ffb22b; }
 
 .has-warning .form-control-warning {
-  background-image: url(../../assets/images/icon/warning.svg); }
+  background-image: url(assets/images/icon/warning.svg); }
 
 .has-warning .form-control {
   border-color: #ffb22b; }
@@ -5589,7 +5589,7 @@ File: scss
   color: #ef5350; }
 
 .has-danger .form-control-danger {
-  background-image: url(../../assets/images/icon/danger.svg); }
+  background-image: url(assets/images/icon/danger.svg); }
 
 .has-danger .form-control {
   border-color: #ef5350; }
