--- a/src/assets/scss/grid.scss
+++ b/src/assets/scss/grid.scss
@@ -293,7 +293,7 @@ File: scss
 }
 
 .has-success .form-control-success {
-	background-image: url(../../assets/images/icon/success.svg);
+	background-image: url(assets/images/icon/success.svg);
 }
 
 .has-success .form-control {
@@ -305,7 +305,7 @@ File: scss
 }
 
 .has-warning .form-control-warning {
-	background-image: url(../../assets/images/icon/warning.svg);
+	background-image: url(assets/images/icon/warning.svg);
 }
 
 .has-warning .form-control {
@@ -317,7 +317,7 @@ File: scss
 }
 
 .has-danger .form-control-danger {
-	background-image: url(../../assets/images/icon/danger.svg);
+	background-image: url(assets/images/icon/danger.svg);
 }
 
 .has-danger .form-control {
