--- a/src/assets/css/pages/form-pages.css
+++ b/src/assets/css/pages/form-pages.css
@@ -19,7 +19,7 @@ File: scss
 Custom-select
 ******************/
 .custom-select {
-  background: url(../../assets/images/custom-select.png) right 0.75rem center no-repeat; }
+  background: url(assets/images/custom-select.png) right 0.75rem center no-repeat; }
 
 /*******************
 textarea
