--- a/src/assets/scss/pages/form-pages.scss
+++ b/src/assets/scss/pages/form-pages.scss
@@ -12,7 +12,7 @@ Custom-select
 ******************/
 
 .custom-select {
-    background: url(../../assets/images/custom-select.png) right .75rem center no-repeat;
+    background: url(assets/images/custom-select.png) right .75rem center no-repeat;
 }
 
 
